update ml algorithm

--- a/Diet.ipynb
+++ b/Diet.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\r\n",
     "dfFruits = pd.read_pickle(\"D:/Proj 406 Datasets/FoodDietDataset/dietdataframe/Fruits.pkl\")\r\n",
@@ -383,17 +383,274 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "def getTotals(df):\r\n",
+    "    dfTotal = df[[any([age, female, urban, edu]) \r\n",
+    "    for age, female, urban, edu \r\n",
+    "    in zip(df.age==999, df.female==999, df.urban==999, df.edu==999)]]\r\n",
+    "    dfTotal = dfTotal[dfTotal.columns.drop(['median', 'upperci_95', 'lowerci_95', 's_lowerci_95', 's_upperci_95']+list(dfTotal.filter(regex='type')))]\r\n",
+    "    return dfTotal\r\n",
+    "\r\n",
+    "FruitsTotals = getTotals(dfFruits)\r\n",
+    "NonStarchVegetablesTotals = getTotals(dfNonStarchVegetables)\r\n",
+    "PotatoesTotals = getTotals(dfPotatoes)\r\n",
+    "StarchyVegTotals = getTotals(dfStarchyVeg)\r\n",
+    "BeanLegumeTotals = getTotals(dfBeanLegume)\r\n",
+    "NutSeedsTotals = getTotals(dfNutsSeeds)\r\n",
+    "RefinedGrainsTotals = getTotals(dfRefinedGrains)\r\n",
+    "WholeGrainsTotals = getTotals(dfWholeGrains)\r\n",
+    "ProcessedMeatTotals = getTotals(dfProcessedMeat)\r\n",
+    "SeafoodsTotals = getTotals(dfSeafoods)\r\n",
+    "EggsTotals = getTotals(dfEggs)\r\n",
+    "CheeseTotals = getTotals(dfCheese)\r\n",
+    "YoghurtTotals = getTotals(dfYoghurt)\r\n",
+    "MilkTotals = getTotals(dfMilk)\r\n",
+    "\r\n",
+    "Totals = [FruitsTotals, NonStarchVegetablesTotals, PotatoesTotals, StarchyVegTotals,\r\n",
+    "    BeanLegumeTotals, NutSeedsTotals, RefinedGrainsTotals, WholeGrainsTotals,\r\n",
+    "    ProcessedMeatTotals, SeafoodsTotals, EggsTotals, CheeseTotals,\r\n",
+    "    YoghurtTotals, MilkTotals]\r\n",
+    "dfTotals = pd.concat(Totals)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "dfTotals.describe(include='all')"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>superregion2</th>\n",
+       "      <th>iso3</th>\n",
+       "      <th>age</th>\n",
+       "      <th>female</th>\n",
+       "      <th>urban</th>\n",
+       "      <th>edu</th>\n",
+       "      <th>year</th>\n",
+       "      <th>varnum</th>\n",
+       "      <th>serving</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10225320</td>\n",
+       "      <td>10225320</td>\n",
+       "      <td>1.022532e+07</td>\n",
+       "      <td>1.022532e+07</td>\n",
+       "      <td>1.022532e+07</td>\n",
+       "      <td>1.022532e+07</td>\n",
+       "      <td>1.022532e+07</td>\n",
+       "      <td>1.022532e+07</td>\n",
+       "      <td>1.019525e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>7</td>\n",
+       "      <td>185</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>SSA</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>2653056</td>\n",
+       "      <td>55272</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.064468e+02</td>\n",
+       "      <td>4.891277e+02</td>\n",
+       "      <td>4.891277e+02</td>\n",
+       "      <td>3.679202e+02</td>\n",
+       "      <td>2.004714e+03</td>\n",
+       "      <td>1.085714e+01</td>\n",
+       "      <td>6.239673e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.349611e+02</td>\n",
+       "      <td>4.991371e+02</td>\n",
+       "      <td>4.991371e+02</td>\n",
+       "      <td>4.805469e+02</td>\n",
+       "      <td>9.587407e+00</td>\n",
+       "      <td>1.339967e+01</td>\n",
+       "      <td>7.957784e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.990000e+03</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.850549e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.750000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2.000000e+00</td>\n",
+       "      <td>1.995000e+03</td>\n",
+       "      <td>4.000000e+00</td>\n",
+       "      <td>1.322184e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.750000e+01</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>3.000000e+00</td>\n",
+       "      <td>2.005000e+03</td>\n",
+       "      <td>7.500000e+00</td>\n",
+       "      <td>3.362493e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.750000e+01</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>2.015000e+03</td>\n",
+       "      <td>1.200000e+01</td>\n",
+       "      <td>7.992898e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>9.990000e+02</td>\n",
+       "      <td>2.018000e+03</td>\n",
+       "      <td>5.700000e+01</td>\n",
+       "      <td>1.720588e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       superregion2      iso3           age        female         urban  \\\n",
+       "count      10225320  10225320  1.022532e+07  1.022532e+07  1.022532e+07   \n",
+       "unique            7       185           NaN           NaN           NaN   \n",
+       "top             SSA       AFG           NaN           NaN           NaN   \n",
+       "freq        2653056     55272           NaN           NaN           NaN   \n",
+       "mean            NaN       NaN  1.064468e+02  4.891277e+02  4.891277e+02   \n",
+       "std             NaN       NaN  2.349611e+02  4.991371e+02  4.991371e+02   \n",
+       "min             NaN       NaN  5.000000e-01  0.000000e+00  0.000000e+00   \n",
+       "25%             NaN       NaN  1.750000e+01  0.000000e+00  0.000000e+00   \n",
+       "50%             NaN       NaN  4.750000e+01  1.000000e+00  1.000000e+00   \n",
+       "75%             NaN       NaN  7.750000e+01  9.990000e+02  9.990000e+02   \n",
+       "max             NaN       NaN  9.990000e+02  9.990000e+02  9.990000e+02   \n",
+       "\n",
+       "                 edu          year        varnum       serving  \n",
+       "count   1.022532e+07  1.022532e+07  1.022532e+07  1.019525e+07  \n",
+       "unique           NaN           NaN           NaN           NaN  \n",
+       "top              NaN           NaN           NaN           NaN  \n",
+       "freq             NaN           NaN           NaN           NaN  \n",
+       "mean    3.679202e+02  2.004714e+03  1.085714e+01  6.239673e-01  \n",
+       "std     4.805469e+02  9.587407e+00  1.339967e+01  7.957784e-01  \n",
+       "min     1.000000e+00  1.990000e+03  1.000000e+00  1.850549e-05  \n",
+       "25%     2.000000e+00  1.995000e+03  4.000000e+00  1.322184e-01  \n",
+       "50%     3.000000e+00  2.005000e+03  7.500000e+00  3.362493e-01  \n",
+       "75%     9.990000e+02  2.015000e+03  1.200000e+01  7.992898e-01  \n",
+       "max     9.990000e+02  2.018000e+03  5.700000e+01  1.720588e+01  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\r\n",
-    "print('Using {} device'.format(device))"
+    "if not sum(dfTotals.isna().any()):\r\n",
+    "    print('No missing values in dataset')\r\n",
+    "else:\r\n",
+    "    print('Missing Data {}'.format(dfTotals.isna().any()))"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Using cuda device\n"
+      "Missing Data superregion2    False\n",
+      "iso3            False\n",
+      "age             False\n",
+      "female          False\n",
+      "urban           False\n",
+      "edu             False\n",
+      "year            False\n",
+      "varnum          False\n",
+      "serving          True\n",
+      "dtype: bool\n"
      ]
     }
    ],
@@ -401,78 +658,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "source": [
-    "def getIndv(df):\r\n",
-    "    dfTotal = df[[all([age, female, urban, edu]) \r\n",
-    "    for age, female, urban, edu \r\n",
-    "    in zip(df.age!=999, df.female!=999, df.urban!=999, df.edu!=999)]]\r\n",
-    "    dfTotal = dfTotal[dfTotal.columns.drop(['superregion2', 'varnum', 'median', 'upperci_95', 'lowerci_95', 's_lowerci_95', 's_upperci_95']+list(dfTotal.filter(regex='type')))]\r\n",
-    "    return dfTotal\r\n",
-    "\r\n",
-    "FruitsIndv = getIndv(dfFruits)\r\n",
-    "NonStarchVegetablesIndv = getIndv(dfNonStarchVegetables)\r\n",
-    "PotatoesIndv = getIndv(dfPotatoes)\r\n",
-    "StarchyVegIndv = getIndv(dfStarchyVeg)\r\n",
-    "BeanLegumeIndv = getIndv(dfBeanLegume)\r\n",
-    "NutSeedsIndv = getIndv(dfNutsSeeds)\r\n",
-    "RefinedGrainsIndv = getIndv(dfRefinedGrains)\r\n",
-    "WholeGrainsIndv = getIndv(dfWholeGrains)\r\n",
-    "ProcessedMeatIndv = getIndv(dfProcessedMeat)\r\n",
-    "SeafoodsIndv = getIndv(dfSeafoods)\r\n",
-    "EggsIndv = getIndv(dfEggs)\r\n",
-    "CheeseIndv = getIndv(dfCheese)\r\n",
-    "YoghurtIndv = getIndv(dfYoghurt)\r\n",
-    "\r\n",
-    "individualData = [FruitsIndv,\r\n",
-    "    NonStarchVegetablesIndv,\r\n",
-    "    PotatoesIndv,\r\n",
-    "    StarchyVegIndv,\r\n",
-    "    BeanLegumeIndv,\r\n",
-    "    NutSeedsIndv,\r\n",
-    "    RefinedGrainsIndv,\r\n",
-    "    WholeGrainsIndv,\r\n",
-    "    ProcessedMeatIndv,\r\n",
-    "    SeafoodsIndv,\r\n",
-    "    EggsIndv,\r\n",
-    "    CheeseIndv,\r\n",
-    "    YoghurtIndv]\r\n",
-    "dfIndividualData = pd.concat(individualData)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "source": [
-    "from sklearn.model_selection import train_test_split\r\n",
-    "y = dfIndividualData['serving']\r\n",
-    "X = dfIndividualData.drop(['serving'], axis=1)\r\n",
-    "X_train, y_train, X_test, y_test = train_test_split(X, y)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "source": [
-    "from sklearn.pipeline import Pipeline\r\n",
-    "from sklearn.preprocessing import OrdinalEncoder"
+    "dfTrain = dfTotals[dfTotals['year'] != 2018]\r\n",
+    "dfTest = dfTotals[dfTotals['year'] == 2018]\r\n",
+    "print(\"Training dataframe: {} \\nTesting dataframe: {}\".format(dfTrain.shape, dfTest.shape))"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(4444440, 7)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 28
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Training dataframe: (8764560, 9) \n",
+      "Testing dataframe: (1460760, 9)\n"
+     ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "from sklearn.pipeline import Pipeline\r\n",
+    "from sklearn.compose import ColumnTransformer\r\n",
+    "from sklearn.preprocessing import OrdinalEncoder\r\n",
+    "from sklearn.preprocessing import OneHotEncoder\r\n",
+    "from sklearn.impute import SimpleImputer\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.model_selection import KFold\r\n",
+    "from sklearn.linear_model import Ridge\r\n",
+    "from sklearn.ensemble import RandomForestRegressor\r\n",
+    "from xgboost import XGBRegressor\r\n",
+    "from catboost import CatBoostRegressor\r\n",
+    "from lightgbm import LGBMRegressor\r\n",
+    "from sklearn.metrics import mean_squared_error\r\n",
+    "\r\n",
+    "seed = 18"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "catFeaturesLowCard = ['superregion2']\r\n",
+    "catFeaturesHighCard = ['iso3']\r\n",
+    "numFeatures = ['age', 'female', 'urban', 'edu', 'varnum']\r\n",
+    "features = catFeaturesLowCard + catFeaturesHighCard + numFeatures\r\n",
+    "X = dfTrain.drop(['serving'], axis=1).copy()\r\n",
+    "y = dfTrain['serving'].copy()\r\n",
+    "X_test = dfTest.drop(['serving'], axis=1).copy()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "numericalTransformer = Pipeline(steps=[\r\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),\r\n",
+    "    ('scaler', StandardScaler())\r\n",
+    "])\r\n",
+    "categoricalTransformerHighCard = Pipeline(steps=[\r\n",
+    "    ('ordinal', OrdinalEncoder())\r\n",
+    "])\r\n",
+    "categoricalTransformerLowCard = Pipeline(steps=[\r\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\r\n",
+    "])\r\n",
+    "preprocessor = ColumnTransformer(transformers=[\r\n",
+    "    ('num', numericalTransformer, numFeatures),\r\n",
+    "    ('cat_low_card', categoricalTransformerLowCard, catFeaturesLowCard),\r\n",
+    "    ('cat_high_card', categoricalTransformerHighCard, catFeaturesHighCard)\r\n",
+    "])"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -487,7 +750,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.5",
+   "version": "3.8.11",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -499,7 +762,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3.8.11 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "d913e3b7d71d98b901f0a7b4469557014f612ac8de5c4a20d183446f21f7d84b"
